test(tests): обновить интеграционные и модульные тесты под контекст безопасности и JWT